# pfc-firmware-sdk

./: .gitattributes  .gitignore  Changelog  Kconfig  Makefile  README.md  selected_platformconfig  selected_ptxconfig  selected_toolchain
local_src/led-server-2/: Makefile.am  configure.ac
local_src/led-server-2/data/: Makefile.am  ledserver2.pc.in
local_src/led-server-2/include/: Makefile.am  ledserver_API.h
local_src/led-server-2/src/: Makefile.am
local_src/led-server-2/src/hal/gpio/: leds.c  perspecto_gpios.h  pfc200_eval_gpios.h
local_src/led-server-2/src/hal/pca955x/: leds.c
local_src/led-server-2/src/header/: common.h  led_blink_sequential.h  led_multi.h  led_schedule.h  leds.h  sequence_handler.h
local_src/led-server-2/src/kernel/: Makefile.am  led_blink_sequential.c  led_multi.c  led_schedule.c
local_src/led-server-2/src/sequence/: Makefile.am  sequence_750.c  sequence_blink.c  sequence_can.c  sequence_flash.c  sequence_handler.c  sequence_rocket.c
local_src/led-server-2/testapp/: Makefile.am  auto.c  interactive.c  ledmisc.c  ledmisc.h  main.c
local_src/serial_dispatcher/: Makefile.am  configure.ac
local_src/serial_dispatcher/data/: Makefile.am  serial_dispatcher  serial_dispatcher.conf
local_src/serial_dispatcher/src/: Makefile.am  login_shell.c  serial_dispatcher.c  services.h  wago.c
local_src/swconfig/: Makefile.am  cli.c  configure.ac  libs.txt  swlib.c  uci.c
local_src/wago-pfc-diagnostic/: Makefile.am  configure.ac
local_src/wago-pfc-diagnostic/include/: LedCtl_API.h  Makefile.am  diagnostic_xml.h  led_info_json.h
local_src/wago-pfc-diagnostic/include/diagnostic/: Makefile.am  diagnostic_API.h  diagnostic_min_API.h  diagnostic_xml_API.h
local_src/wago-pfc-diagnostic/src/: Makefile.am  diagnostic_xml.c
local_src/wago-pfc-diagnostic/src/EActingBox/: Makefile.am  addcstdiag.c  decodeid.c  eactingbox.h  eventmsg.c  getidstate.c  getledstate.c  logforward.c  main_eactingbox.c  parse_log.c  parse_log.h  wago.diagnostic.service
local_src/wago-pfc-diagnostic/src/data/: led_info.json
local_src/wago-pfc-diagnostic/src/diag_lib/: Makefile.am  diagnostic.c  diagnostic_xml.c  wago_diagnostic.pc.in  wago_diagnostic_xml.pc.in
local_src/wago-pfc-diagnostic/src/diagnostic/: copy_make.sh  create_header.xslt  create_host_xml.xslt  create_system_xml.xslt  diagnostic.dtd  diagnostic_host.dtd  diagnostics.dtd  dirs.sh  template_schema.xslt  template_schema_host.xslt  xslt_clean.sh  xslt_lock.sh  xslt_make.sh  xslt_make_check.sh  xslt_make_clean.sh
local_src/wago-pfc-diagnostic/src/led_info/: led_info_json.cpp
local_src/wago-pfc-diagnostic/src/ledserverd/: Makefile.am  common.h  main.c
local_src/wago-pfc-diagnostic/src/xml/: common.xml  led.0x0000.default.xml  led.0x000A.PFC200.xml  led.0x000C.PFC100.xml  led.0x000C.PFC200.xml  led.0x000C.PFC200_0000-0100.xml  led.0x000C.SRC.xml  led.0x000F.PFC200.xml  led.0x001C.PFC200.xml  led.0x0182.PFC200.xml  led.0x1001.TP600.xml  led.0x1006.PFC200.xml  led.0x1011.CC100.xml  led.0x3005.PFC200-ADV.xml  led_eval.xml  led_server.xml
local_src/wago-pfc-diagnostic/testapp/: Makefile.am  auto.c  interactive.c  ledmisc.c  ledmisc.h  main.c  test_get_led_config  testapp.h
platform-wago-pfcXXX/: logfile  selected_platformconfig  selected_ptxconfig
projectroot/: logfile
rules/: ConfigToolLIB.in  ConfigToolLIB.make  TscParamServ.make  abseil-cpp.in  abseil-cpp.make  aide-bbinit.in  aide.in  aide.make  alsa-lib.make  alsa-utils.make  azure.in  azure.make  backup-restore-pfc.in.bak  barebox.make  barebox_mlo.make  bash.in  bash.make  berlios-can-utils.in  berlios-can-utils.make  boost.in  boost.make  bootpc.in  bootpc.make  busybox-bbinit.in  busybox.in  busybox.make  c-ares.in  c-ares.make  ca-certificates.in  ca-certificates.make  cds3-tscmodemiecinterface.in  cds3-tscmodemiecinterface.make  cds3-tscprocess.in  cds3-tscprocess.make  cds3-tscsecure.in  cds3-tscsecure.make  cds3-tscuserdb.in  (+739 more)
src/libnvram/: #autogen.sh#  Makefile.am  README  configure.ac
src/libnvram/src/: Makefile.am  nvram.c  nvram.h
src/liboslinux/: AUTHORS  COPYING  Makefile.am  Makefile.in  aclocal.m4  configure.ac  libtool
src/liboslinux-1.0.0.0/liboslinux/: Makefile.am  Makefile.in  OS_Linux26.c  OS_Linux26_ext.c  OsMemory.c  OsMutex.c  OsRessource.c  OsRwLock.c  OsSemaphore.c  OsSleep.c  OsThread.c  OsTime.c  OsTimer.c  OsTrace.c  oslinux.pc
src/liboslinux-1.0.0.0/liboslinux/.deps/: liboslinux_la-OsMutex.Plo  liboslinux_la-OsSemaphore.Plo  liboslinux_la-OsSleep.Plo  liboslinux_la-OsThread.Plo  liboslinux_la-OsTimer.Plo  liboslinux_la-OsTrace.Plo
src/liboslinux/exampleProgram/: Makefile  Makefile.am  Makefile.in  exampleProgram.c
src/liboslinux/include/: Makefile.am  Makefile.in  OsAtomic.h  OsCommon.h  OsCondition.h  OsIncludes.h  OsLinux_API.h  OsMemory.h  OsMutex.h  OsRessource.h  OsRwLock.h  OsSemaphore.h  OsSleep.h  OsThread.h  OsTime.h  OsTimer.h  OsTrace.h  OsTypedefs.h
src/liboslinux/liboslinux/: Makefile  OsCondition.c  OsMemory.c  OsMutex.c  OsRessource.c  OsRwLock.c  OsSemaphore.c  OsSleep.c  OsThread.c  OsTime.c  OsTimer.c  OsTrace.c
src/liboslinux/liboslinux/.deps/: liboslinux_la-OsCondition.Plo  liboslinux_la-OsMemory.Plo  liboslinux_la-OsRessource.Plo  liboslinux_la-OsTime.Plo
src/oms-0.1/: Makefile.am  configure.ac
src/oms-0.1/data/: Makefile.am  oms.pc.in
src/oms-0.1/etc/: Makefile.am  omsd.conf  omsdaemon
src/oms-0.1/include/: Makefile.am  wago_oms_API.h
src/oms-0.1/src/: Makefile.am
src/oms-0.1/src/liboms/: Makefile.am  liboms.c  liboms_internal.h  liboms_statemaschine.c
src/oms-0.1/src/omsd/: Makefile.am  omsd.c  omsd.h  omsd_config.c
src/wago_dbus/: Makefile.am  configure.ac
src/wago_dbus/data/: Makefile.am  wago_dbus.pc.in
src/wago_dbus/include/: Makefile.am  communication_API.h
src/wago_dbus/src/: Makefile.am  communication_direct.c  communication_general.c  communication_internal.h  communication_message.c  communication_server.c
src/wago_dbus/testtool/: Makefile.am  multiworker.c  multiworker_client1.c  multiworker_client2.c  user1.c  user2.c  user3.c  user4.c
(+5058 files in other folders)
