LED_ERR_SUBDIRS = 

LED_ERR_SUBDIRS += diag_lib 
LED_ERR_SUBDIRS += EActingBox 
LED_ERR_SUBDIRS += ledserverd

SUBDIRS = $(LED_ERR_SUBDIRS)

specificconfdir=$(sysconfdir)/specific
specificconf_DATA = xml/led.0x001C.PFC200.xml
specificconf_DATA += xml/led.0x000C.PFC200.xml
specificconf_DATA += xml/led.0x000C.PFC200_0000-0100.xml
specificconf_DATA += xml/led.0x000A.PFC200.xml
specificconf_DATA += xml/led.0x000E.PFC200.xml
specificconf_DATA += xml/led.0x000F.PFC200.xml
specificconf_DATA += xml/led.0x0182.PFC200.xml
specificconf_DATA += xml/led.0x000C.PFC100.xml
specificconf_DATA += xml/led.0x1000.TP600.xml
specificconf_DATA += xml/led.0x1001.TP600.xml
specificconf_DATA += xml/led.0x1002.TP600.xml
specificconf_DATA += xml/led.0x1003.TP600.xml
specificconf_DATA += xml/led.0x1006.PFC200.xml
specificconf_DATA += xml/led.0x1008.TP600.xml
specificconf_DATA += xml/led.0x1009.TP600.xml
specificconf_DATA += xml/led.0x3005.PFC200-ADV.xml
specificconf_DATA += xml/led.0x0000.default.xml
specificconf_DATA += data/led_info.json
