# These files will end up in the install include directory
# For example, /usr/include
oslinuxincludedir=$(includedir)/OsLinux

oslinuxinclude_HEADERS= OsAtomic.h OsCondition.h OsConfig.h OsCommon.h OsMemory.h OsMutex.h OsRwLock.h OsSemaphore.h OsThread.h OsTime.h OsTimer.h OsTrace.h OsRessource.h OsSleep.h OsTypedefs.h
